--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: David J. Sweeney | Homepage
-description:  Software Engineer and Navy veteran.
+description:  David Sweeney is a Software Engineer and 20 year Navy veteran.
